-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b131
-
generic
-
generic
Looks like JDK-8158351 did not fixed problem:
----------System.out:(3/100)----------
Error occurred during initialization of VM
java.lang.NoClassDefFoundError: jdk/vm/ci/runtime/JVMCI
----------System.out:(3/100)----------
Error occurred during initialization of VM
java.lang.NoClassDefFoundError: jdk/vm/ci/runtime/JVMCI
- relates to
-
JDK-8158351 [JVMCI] NoClassDefFoundError: jdk/vm/ci/runtime/JVMCI
-
- Resolved
-